--- a/_posts/2016-11-13-new-post.md
+++ b/_posts/2016-11-13-new-post.md
@@ -16,45 +16,47 @@ parents2: [20161113231042.jpg, 20161113231044.jpg, 20161113231045.jpg, 201611132
 
 ## 参加者の声
 
-<div class="row">
+<div class="row row-eq-height">
 {% for image in page.children %}
-<div class="col-md-3">
-<img src="/images/enq/20161113-am/{{ image }}" />
+<div class="col-md-4">
+<a href="/images/enq/{{ page.date | date: "%Y%m%d" }}-am/{{ image }}" class="thumbnail"><img src="/images/enq/{{ page.date | date: "%Y%m%d" }}-am/{{ image }}" /></a>
 </div>
 {% endfor %}
+
 </div>
 
 ## 保護者の声
 
-<div class="row">
+<div class="row row-eq-height">
 {% for image in page.parents %}
-<div class="col-md-3">
-<img src="/images/enq/20161113-am/parents/{{ image }}" />
-</div>
+<div class="col-md-4">
+<a href="/images/enq/{{ page.date | date: "%Y%m%d" }}-am/parents/{{ image }}" class="thumbnail"><img src="/images/enq/{{ page.date | date: "%Y%m%d" }}-am/parents/{{ image }}" /></a></div>
 {% endfor %}
+
 </div>
 
 # 午後の部
 
 * [募集サイト](https://coderdojo-suginami.doorkeeper.jp/events/52099)
 
-
 ## 参加者の声
 
-<div class="row">
+<div class="row row-eq-height">
 {% for image in page.children2 %}
-<div class="col-md-3">
-<img src="/images/enq/20161113-pm/{{ image }}" />
+<div class="col-md-4">
+<a href="/images/enq/{{ page.date | date: "%Y%m%d" }}-pm/{{ image }}" class="thumbnail"><img src="/images/enq/{{ page.date | date: "%Y%m%d" }}-pm/{{ image }}" /></a>
 </div>
 {% endfor %}
+
 </div>
 
 ## 保護者の声
 
-<div class="row">
+<div class="row row-eq-height">
 {% for image in page.parents2 %}
-<div class="col-md-3">
-<img src="/images/enq/20161113-pm/parents/{{ image }}" />
+<div class="col-md-4">
+<a href="/images/enq/{{ page.date | date: "%Y%m%d" }}-pm/parents/{{ image }}" class="thumbnail"><img src="/images/enq/{{ page.date | date: "%Y%m%d" }}-pm/parents/{{ image }}" /></a>
 </div>
 {% endfor %}
+
 </div>
