--- a/_posts/2016-12-18-new-post.md
+++ b/_posts/2016-12-18-new-post.md
@@ -12,12 +12,5 @@ parents: [20161218233322.jpg, 20161218233323.jpg, 20161218233325.jpg, 2016121823
 
 {% include voice.html %}
 
-## 保護者の声
+{% include voice_parents.html %}
 
-<div class="row">
-{% for image in page.parents %}
-<div class="col-md-3">
-<a href="/images/enq/{{ page.date | date: "%Y%m%d" }}/parents/{{ image }}"><img src="/images/enq/{{ page.date | date: "%Y%m%d" }}/parents/{{ image }}" /></a>
-</div>
-{% endfor %}
-</div>
