--- a/_posts/2017-05-20-new-post.md
+++ b/_posts/2017-05-20-new-post.md
@@ -12,14 +12,4 @@ parents: [20170723215119.jpg,     20170723215129000.jpg,  20170723215132000.jpg,
 
 {% include voice.html %}
 
-## 保護者の声
-
-<div class="row">
-{% for image in page.parents %}
-<div class="col-md-3">
-<a href="/images/enq/{{ page.date | date: "%Y%m%d" }}/parents/{{ image }}"><img src="/images/enq/{{ page.date | date: "%Y%m%d" }}/parents/{{ image }}" /></a>
-</div>
-{% endfor %}
-</div>
-
-
+{% include voice_parents.html %}
